--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Kelly's Portfolio Website</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
    <h1>This is some text for testing</h1> 
