--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Kelly's Portfolio Website</title>
-    <link rel="icon" href="./images/favicon.png" />
+    <link rel="icon" href="./images/favicon1.png" />
     <link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
-   <h1>This is some text for testing</h1> 
+   <h1>Welcome to my Portfolio Site!</h1> 
    <ul>
         <li>Home</li>
         <li>Projects</li>
